Standardised backmatter a little bit and made it look more like the rest of the chapters

--- a/backmatter/fdl-1.3.tex
+++ b/backmatter/fdl-1.3.tex
@@ -1,25 +1,20 @@
-\chapter*{\rlap{GNU Free Documentation License}}
-\phantomsection  % so hyperref creates bookmarks
+\chapter*{GNU Free Documentation License}
 \addcontentsline{toc}{chapter}{GNU Free Documentation License}
-%\label{label_fdl}
+\addtocounter{chapter}{1}
+\vspace{-1cm}
 
- \begin{center}
+Version 1.3, 3 November 2008
 
-       Version 1.3, 3 November 2008
+Copyright \copyright{} 2000, 2001, 2002, 2007, 2008  Free Software Foundation, Inc.
 
+\bigskip
 
- Copyright \copyright{} 2000, 2001, 2002, 2007, 2008  Free Software Foundation, Inc.
+ <http://fsf.org/>
 
- \bigskip
+\bigskip
 
-     <http://fsf.org/>
-
- \bigskip
-\end{center}
-
- Everyone is permitted to copy and distribute verbatim copies
- of this license document, but changing it is not allowed.
-
+Everyone is permitted to copy and distribute verbatim copies of this
+license document, but changing it is not allowed.
 
 \def\thesection{\arabic{section}.}
 \setcounter{section}{-1}
