--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -1,5 +1,7 @@
 \chapter*{List of authors}
 \addcontentsline{toc}{chapter}{List of authors}
+\addtocounter{chapter}{1}
+\vspace{-1cm}
 
 \emph{The following authors have contributed to this book.}
 
