Add item to TODO list

--- a/TODO
+++ b/TODO
@@ -47,3 +47,5 @@ Things to discuss
 * Full names in author list
 * Consistent use of single (') or double (") quotes.
 * How to write the convective term in NS: with or without \cdot
+* Add another level in numbering (include subsections) suggested by HPL
+  who has many references to subsections in the tutorial
