Make book compile again

--- a/TODO
+++ b/TODO
@@ -49,3 +49,4 @@ Things to discuss
 * How to write the convective term in NS: with or without \cdot
 * Add another level in numbering (include subsections) suggested by HPL
   who has many references to subsections in the tutorial
+* Always italics for Latin like a posteriori?
