Fix a bunch of typos in [alnes-3] as reported by Rob Kirby.

--- a/book.tex
+++ b/book.tex
@@ -63,7 +63,7 @@
 \fenicsinput{logg-3}
 \fenicsinput{oelgaard-2}
 \fenicsinput{kirby-8}
-\fenicsinput{kirby-4}
+%\fenicsinput{kirby-4}
 
 \part{Implementation}
 
