Proofreading of [hoffman-1]

--- a/book.tex
+++ b/book.tex
@@ -29,27 +29,24 @@
 % Copyright page
 \input{frontmatter/copyright}
 
-
 % Contents
 \tableofcontents
 %\listoffigures
 %\listoftables
 
-%------------------------------------------------------------------------------
 % Start main matter
 \mainmatter
-
-% Chapters
 
 %------------------------------------------------------------------------------
 % For testing, uncomment
 
-%\fenicsinput{kirby-8}
+\fenicsinput{hoffman-1}
 %\input{backmatter/authors}
 %\input{backmatter/fdl-1.3}
-%\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
+\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
 
 %------------------------------------------------------------------------------
+% Chapters
 
 \input{chapters/intro/chapter.tex}
 \fenicsinput{langtangen}
@@ -119,6 +116,7 @@
 % Index
 \newcommand{\icode}[1]{\texttt{#1}} % seems necessary
 \printindex
+
 %------------------------------------------------------------------------------
 \end{document}
 %------------------------------------------------------------------------------
