--- a/TODO
+++ b/TODO
@@ -50,3 +50,4 @@ Things to discuss
 * Add another level in numbering (include subsections) suggested by HPL
   who has many references to subsections in the tutorial
 * Always italics for Latin like a posteriori?
+* Should we include a list of notation?
