Updat test book and small fixes in kirby-4.

--- a/book_test.tex
+++ b/book_test.tex
@@ -80,8 +80,7 @@
 \fenicsinput{kvs-2}
 \fenicsinput{hentschel}
 \fenicsinput{narayanan}
-%%\fenicsinput{oelgaard-1}
-\input{unfinished/oelgaard-1/chapter.tex}
+\fenicsinput{oelgaard-1}
 \fenicsinput{nikbakht}
 \fenicsinput{schroll}
 \fenicsinput{vynnytska}
