--- a/TODO
+++ b/TODO
@@ -34,6 +34,7 @@ instead of
 \begin{c++}
   stuff
 \end{c++}
+* Check for % accidentally included in paragraphs as a result of auto-fill
 
 Things to discuss
 * Fix width of C++ and Python code environments, seem different
