--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 Things to check
 
+* Check bounding boxes for image files. Some are very loose.
 * There should be callouts in text to all floats
 * Add items to index, should be used in all chapters
 * Problem with numbers in Palatino, 0 looks like o. See FFC chapter
