Add item to TODO list

--- a/TODO
+++ b/TODO
@@ -36,6 +36,7 @@ instead of
   stuff
 \end{c++}
 * Check for % accidentally included in paragraphs as a result of auto-fill
+* Check for use of Equation, equation, Eq., eq
 
 Things to discuss
 * Fix width of C++ and Python code environments, seem different
