--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7859,9 +7859,10 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
 }
 
 @MISC{SIP,
-  title = {{SIP}: {P}ython extension module generator},
+  title = {Software package},
+  key = {{SIP}: {P}ython extension module generator},
   url = {http://www.riverbankcomputing.com/software/sip/intro},
-  key = {{SIP}: {P}ython extension module generator}
+  author = {SIP}
 }
 
 @UNPUBLISHED{vmtk,
