Initial fixes in [hoffman-2]

--- a/book.tex
+++ b/book.tex
@@ -40,10 +40,10 @@
 %------------------------------------------------------------------------------
 % For testing, uncomment
 
-%\fenicsinput{hoffman-1}
+\fenicsinput{hoffman-2}
 %\input{backmatter/authors}
 %\input{backmatter/fdl-1.3}
-%\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
+\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
