Tidy up test layout.

--- a/book_test.tex
+++ b/book_test.tex
@@ -1,5 +1,8 @@
-\documentclass[a4paper,10pt]{layout/fenicsbooktest}
+\documentclass[a4paper,10pt,openright]{book}
 
+
+% Book layout settings
+\input{layout/fenicstest.defs}
 
 % Book metadata
 %\title{Automated\\ \noindent Scientific\\ \noindent Computing}
