--- a/TODO
+++ b/TODO
@@ -37,6 +37,7 @@ instead of
 \end{c++}
 * Check for % accidentally included in paragraphs as a result of auto-fill
 * Check for use of Equation, equation, Eq., eq
+* Remove chapter header when backmatter starts
 
 Things to discuss
 * Fix width of C++ and Python code environments, seem different
