--- a/book.tex
+++ b/book.tex
@@ -40,7 +40,7 @@
 %------------------------------------------------------------------------------
 % For testing, uncomment
 
-%\fenicsinput{hoffman-2}
+%\fenicsinput{selim}
 %\input{backmatter/authors}
 %\input{backmatter/fdl-1.3}
 %\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
