--- a/TODO
+++ b/TODO
@@ -38,6 +38,8 @@ instead of
 * Check for % accidentally included in paragraphs as a result of auto-fill
 * Check for use of Equation, equation, Eq., eq
 * Remove chapter header when backmatter starts
+* Check all captions after adjusting book margins so they don't intersect
+  with figures or text
 
 Things to discuss
 * Fix width of C++ and Python code environments, seem different
