Apply proofreading fixes suggested by Joachim to [kvs-2]. Some issues remain. Will discuss with Kent.

--- a/TODO
+++ b/TODO
@@ -40,6 +40,8 @@ instead of
 * Remove chapter header when backmatter starts
 * Check all captions after adjusting book margins so they don't intersect
   with figures or text
+* Use $nn\,\mathrm{mm}$ for quantitites, will typeset numbers correctly,
+  not using text font
 
 Things to discuss
 * Fix width of C++ and Python code environments, seem different
