Apply proofreading fixes from Marie to [logg-2]

--- a/TODO
+++ b/TODO
@@ -42,6 +42,7 @@ instead of
   with figures or text
 * Use $nn\,\mathrm{mm}$ for quantitites, will typeset numbers correctly,
   not using text font
+* Fix missing indentation of paragraphs, was removed in rev 625
 
 Things to discuss
 * Fix width of C++ and Python code environments, seem different
