Apply proofreading fixes from Marie to [kirby-1]

--- a/TODO
+++ b/TODO
@@ -43,6 +43,7 @@ instead of
 * Use $nn\,\mathrm{mm}$ for quantitites, will typeset numbers correctly,
   not using text font
 * Fix missing indentation of paragraphs, was removed in rev 625
+* Add chapter numbers to headings
 
 Things to discuss
 * Fix width of C++ and Python code environments, seem different
