Apply proofreading fixes from Marie to [oelgaard-2]

--- a/TODO
+++ b/TODO
@@ -44,6 +44,7 @@ instead of
   not using text font
 * Fix missing indentation of paragraphs, was removed in rev 625
 * Add chapter numbers to headings
+* Fix strange / turning into \ in header for DOLFIN chapter
 
 Things to discuss
 * Fix width of C++ and Python code environments, seem different
