Switch from Tufte style to new FEniCS book class (which looks just about the same)

--- a/book_test.tex
+++ b/book_test.tex
@@ -2,7 +2,7 @@
 
 
 % Book layout settings
-\input{layout/fenicstest.defs}
+\input{layout/fenics.defs}
 
 % Book metadata
 %\title{Automated\\ \noindent Scientific\\ \noindent Computing}
