--- a/book.tex
+++ b/book.tex
@@ -1,16 +1,15 @@
-\documentclass[a4paper,twoside,justified,notoc]{layout/fenicsbook}
+\documentclass{fenicsbook}
 
 % Book metadata
 %\title{Automated\\ \noindent Scientific\\ \noindent Computing}
 \title{Automated Solution of \\
        Differential Equations by \\
        the Finite Element Method}
-\author[The FEniCS Project]{Logg, Mardal, Wells (Eds.)}
-\publisher{Springer-Verlag}
+\author{Logg, Mardal, Wells (Eds.)}
+%\publisher{Springer-Verlag}
 
 % FIXME: Input package somewhere else
 % Generate index
-\usepackage{makeidx}
 \makeindex
 
 %------------------------------------------------------------------------------
@@ -23,27 +22,15 @@
 % Title page
 \maketitle
 
-% Start full width
-\begin{fullwidth}
-
 % Copyright page
 \input{frontmatter/copyright}
 
 % Contents
 \tableofcontents
-%\listoffigures
-%\listoftables
-
-% Start main matter
-\mainmatter
 
 %------------------------------------------------------------------------------
-% For testing, uncomment
-
-%\fenicsinput{selim}
-%\input{backmatter/authors}
-%\input{backmatter/fdl-1.3}
-%\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
+% Start main matter
+\mainmatter
 
 %------------------------------------------------------------------------------
 % Chapters
@@ -110,11 +97,7 @@
 \bibliographystyle{abbrvnat}
 \addcontentsline{toc}{chapter}{References}
 
-% End full width
-\end{fullwidth}
-
 % Index
-\newcommand{\icode}[1]{\texttt{#1}} % seems necessary
 \printindex
 
 %------------------------------------------------------------------------------
