Adjust and comment book margins. I think it's correct now for the T2 book format.

--- a/book.tex
+++ b/book.tex
@@ -33,6 +33,10 @@
 \mainmatter
 
 %------------------------------------------------------------------------------
+% For testing
+%\fenicsinput{logg-1}\end{document}
+
+%------------------------------------------------------------------------------
 % Chapters
 
 \input{chapters/intro/chapter.tex}
