Add missing references for langtangen

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,24 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@Article{Mortensen2011,
+  Author         = {M. Mortensen and H. P. Langtangen and G. N. Wells},
+  Title          = {A {FEniCS}-Based Programming Framework for Modeling Turbulent Flow by the
+{Reynolds}-Averaged {Navier-Stokes} Equations},
+  Journal        = {Advances in Water Resources},
+  year           = 2011,
+  note = {DOI: 10.1016/j.advwatres.2011.02.013},
+}
+
+@InProceedings{Mortensen2011b,
+author =    {M. Mortensen and H. P. Langtangen and J. Myre},
+editor =    {H. I. Andersson and B. Skallerud},
+title =     {cbc.rans -- a new flexible, programmable software framework for computational fluid dynamics},
+booktitle = {Sixth National Conference on Computational Mechanics (MekIT'11)},
+publisher = {Tapir},
+year =      {2011},
+}
+
 @article{SimoTaylor1985,
   title={Consistent tangent operators for rate-independent elastoplasticity},
   author={Simo, J. C. and Taylor, R. L.},
