--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3,17 +3,18 @@
 
 @Article{Mortensen2011,
   Author         = {M. Mortensen and H. P. Langtangen and G. N. Wells},
-  Title          = {A {FEniCS}-Based Programming Framework for Modeling Turbulent Flow by the
-{Reynolds}-Averaged {Navier-Stokes} Equations},
+  Title = {A {FEniCS}-Based Programming Framework for Modeling Turbulent
+  Flow by the {Reynolds}-Averaged {Navier-Stokes} Equations},
   Journal        = {Advances in Water Resources},
   year           = 2011,
-  note = {DOI: 10.1016/j.advwatres.2011.02.013},
+  url = {http://dx.doi.org/10.1016/j.advwatres.2011.02.013},
 }
 
 @InProceedings{Mortensen2011b,
 author =    {M. Mortensen and H. P. Langtangen and J. Myre},
 editor =    {H. I. Andersson and B. Skallerud},
-title =     {cbc.rans -- a new flexible, programmable software framework for computational fluid dynamics},
+title = {cbc.rans -- a new flexible, programmable software framework
+for computational fluid dynamics},
 booktitle = {Sixth National Conference on Computational Mechanics (MekIT'11)},
 publisher = {Tapir},
 year =      {2011},
@@ -150,14 +151,14 @@ year =      {2011},
 }
 
 @article{HughesCottrellBazilevs2005,
- title={Isogeometric analysis: {CAD}, finite elements, {NURBS}, exact geometry and mesh refinement},
+ title={Isogeometric analysis: {CAD}, finite elements, {NURBS}, exact
+ geometry and mesh refinement},
  author={Hughes, T. J. R. and Cottrell, J. A. and Bazilevs, Y.},
  journal={Computer Methods in Applied Mechanics and Engineering},
  volume={194},
- number={39-41},
+ number={39--41},
  pages={4135--4195},
  year={2005},
- publisher={Elsevier}
 }
 
 @article{ChessaSmolinskiBelytschko2002,
@@ -256,7 +257,8 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
 }
 
 @article{Manteuffel1980,
-  title={An incomplete factorization technique for positive definite linear systems},
+  title={An incomplete factorization technique for positive definite
+  linear systems},
   author={Manteuffel, T. A.},
   journal={Mathematics of Computation},
   volume={34},
