Adding changes from Kent-Andre Mardal.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2400,6 +2400,22 @@ pages = {691}
   number = {4}
 }
 
+@ARTICLE{EngelmanSaniGreshoBercovier1982,
+  author = {Engelman, M. S. and Sani, R. L. and Gresho, P. M. and Bercovier, M.},
+  title = {Consistent vs. reduced integration penalty methods for incompressible
+           media using several old and new elements},
+  journal = {International Journal for Numerical Methods in Fluids},
+  volume = {2},
+  number = {1},
+  publisher = {John Wiley & Sons, Ltd},
+  issn = {1097-0363},
+  url = {http://dx.doi.org/10.1002/fld.1650020103},
+  doi = {10.1002/fld.1650020103},
+  pages = {25--42},
+  keywords = {Penalty Method, Incompressible Flow, Reduced Quadrature, Finite Elements},
+  year = {1982}
+}
+
 @ARTICLE{Engsig-KarupHesthavenBinghamEtAl2006,
   author = {Engsig-Karup, Allan P. and Hesthaven, Jan S. and Bingham, Harry B.
 	and Madsen, Per A.},
