--- a/TODO
+++ b/TODO
@@ -45,6 +45,7 @@ instead of
 * Fix missing indentation of paragraphs, was removed in rev 625
 * Add chapter numbers to headings
 * Fix strange / turning into \ in header for DOLFIN chapter
+* Change "CG" to "Lagrange" everywhere
 
 Things to discuss
 * Fix width of C++ and Python code environments, seem different
