--- a/book.tex
+++ b/book.tex
@@ -34,7 +34,7 @@
 
 %------------------------------------------------------------------------------
 % For testing
-%\fenicsinput{logg-1}\end{document}
+\fenicsinput{hoffman-2}\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
