--- a/frontmatter/copyright.tex
+++ b/frontmatter/copyright.tex
@@ -1,16 +1,23 @@
 ~\vfill
 \thispagestyle{empty}
 
-%\par\smallcaps{Published by \thanklesspublisher}
+%\par\smallcaps{Published by Springer}
 
-\par
-Copyright \copyright\ \the\year\ The FEniCS Project. \\
+\noindent
+Copyright \copyright\ \the\year\ The FEniCS Project.
+
+\vspace{1ex}
+
+\noindent
 Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.3
-or any later version published by the Free Software Foundation;
-with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
-A copy of the license is included in the chapter entitled "GNU
-Free Documentation License".
+under the terms of the GNU Free Documentation License, Version 1.3 or
+any later version published by the Free Software Foundation; with no
+Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
+copy of the license is included in the chapter entitled "GNU Free
+Documentation License".
 \index{license}
 
-\par\textit{First printing, \monthyear}
+\vspace{1ex}
+
+\noindent
+\emph{First printing, \monthyear}
