--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -192,7 +192,7 @@
              {Mikael.Mortensen@ffi.no}
              {Norwegian Defence Research Establishment (FFI), Norway}
              {}
-             {Chapter \ref{chap:mortensen}}
+             {Chapters \ref{chap:kvs-1} and \ref{chap:mortensen}}
 
 \fenicsauthor{Harish Narayanan}
              {harish@simula.no}
