Remove [intro] and add empty preface

--- a/book.tex
+++ b/book.tex
@@ -6,9 +6,7 @@
        Differential Equations by \\
        the Finite Element Method}
 \author{Logg, Mardal, Wells (Eds.)}
-%\publisher{Springer-Verlag}
 
-% FIXME: Input package somewhere else
 % Generate index
 \makeindex
 
@@ -24,6 +22,9 @@
 
 % Copyright page
 \input{frontmatter/copyright}
+
+% Preface
+\input{frontmatter/preface}
 
 % Contents
 \tableofcontents
