Test commit, still bzr/lp lock trouble

--- a/frontmatter/preface.tex
+++ b/frontmatter/preface.tex
@@ -31,7 +31,7 @@ chapters in this book are accompanied by supplementary material in the
 form of code examples. These code examples can be downloaded from
 \url{http://www.fenicsproject.org/book}.
 
-\editornote{Comment on code license. AL: Which code license?}
+\editornote{GNW/KAM: Comment on code license. AL: Which code license?}
 
 \vspace{1em}
 
