Undo book.tex change.

--- a/book.tex
+++ b/book.tex
@@ -40,7 +40,53 @@
 %------------------------------------------------------------------------------
 % Chapters
 
+\fenicsinput{langtangen}
+
+\part{Methodology}
+
+\fenicsinput{kirby-7}
+\fenicsinput{kirby-6}
+\fenicsinput{kirby-1}
+\fenicsinput{kirby-5}
+\fenicsinput{logg-3}
+\fenicsinput{oelgaard-2}
+\fenicsinput{kirby-8}
+\fenicsinput{kirby-4}
+
+\part{Implementation}
+
+\fenicsinput{logg-2}
+\fenicsinput{logg-1}
+\fenicsinput{kirby-3}
+\fenicsinput{kirby-2}
+\fenicsinput{wilbers}
+\fenicsinput{alnes-3}
+\fenicsinput{alnes-2}
+\fenicsinput{alnes-1}
+\fenicsinput{hoffman-2}
+\fenicsinput{mardal-2}
+
+\part{Applications}
+
 \fenicsinput{terrel}
+\fenicsinput{kvs-1}
+\fenicsinput{mortensen}
+\fenicsinput{hoffman-1}
+\fenicsinput{selim}
+%\fenicsinput{wells}
+\input{unfinished/tmp-wells/chapter.tex}
+\fenicsinput{lopes}
+\fenicsinput{kvs-2}
+\fenicsinput{hentschel}
+\fenicsinput{narayanan}
+\fenicsinput{oelgaard-1}
+\fenicsinput{nikbakht}
+\fenicsinput{schroll}
+\fenicsinput{vynnytska}
+\fenicsinput{hake}
+\fenicsinput{lezar}
+\fenicsinput{mardal-4}
+\fenicsinput{rognes}
 
 %------------------------------------------------------------------------------
 % Start backmatter
