Add point to TODO

--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 Things to check
 
 * Check bounding boxes for image files. Some are very loose.
+* Use \center in floats (and not \begin{center} foo \end{center}.
+  This avoids introduction of extra unecessary space
 * There should be callouts in text to all floats
 * Add items to index, should be used in all chapters
 * Problem with numbers in Palatino, 0 looks like o. See FFC chapter
