Cleanup and organize TODO list

--- a/TODO
+++ b/TODO
@@ -1,67 +1,51 @@
-Things to check
+Things to fix
+-------------
 
-* Check bounding boxes for image files. Some are very loose.
-* Use \center in floats (and not \begin{center} foo \end{center}.
-  This avoids introduction of extra unecessary space
-* There should be callouts in text to all floats
-* Add items to index, should be used in all chapters
-* Problem with numbers in Palatino, 0 looks like o. See FFC chapter
-  for an example ("Stage 0").
-* Use of i for local indices and I for global indices
-* Check use of \stackrel{+}{=}
-* Check use of : or , before formula
-* Make sure that all references are available (insist on archival web
-  link for documents that are not readily available, e.g. theses, reports)
-* Add http://dx.doi.org/xxxxx link for all papers in reference list. Add
+* Use \center in floats (and not \begin{center} foo \end{center}            xx
+* Fix width of C++ and Python code environments, seem different             xx
+* Remove chapter header when backmatter starts                              xx
+* Change "CG" to "Lagrange" everywhere                                      xx
+* Change color in hyperref to something less neon                           xx
+* Numbers very small in Palatino, 0 looks like o, see FFC chapter           xx
+* Add items to index, should be used in all chapters                        xx
+* Collect code examples for all chapters                                    xx
+* Use \toprule, \midrule, \bottomrule in tables                             xx
+* Fix strange / turning into \ in header for DOLFIN chapter                 OK
+
+Things to check
+---------------
+
+* No indentation of first line in code examples                             xx
+* No "," after "and" except when necessary                                  xx
+* There should be callouts in text to all floats                            xx
+* % accidentally included in paragraphs as a result of auto-fill            xx
+* Always italics for Latin like a posteriori                                xx
+* Full names in author list                                                 xx
+* Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                           xx
+* Use of double quotes instead of single quote in code, including Python    xx
+* Check captions so they don't run into text                                xx
+* Check figure widths                                                       xx
+* Check use of : or , before formula                                        xx
+* Check bounding boxes for image files, some are very loose                 xx
+* Check that all references have archival links if not published            xx
+* Use of "..." vs ``...''                                                   xx
+* Use $nn\,\mathrm{mm}$ for quantitites                                     xx
+
+Things to decide
+----------------
+
+* Use foo or foo() in text when referring to functions?
+* Include a list of notation?
+* How to write the convective term in NS: with or without \cdot?
+
+Not yet considered
+------------------
+
+* Add http://dx.doi.org/xxxxx link for all papers in reference list, add
   for books too when available
 * Add some space around definition environment
-* Make footnotes full page
-* Collect code examples and add references
-* Use of "..." vs ``...''
-* Add labels "C++ code", "Python code", "Bash code" to code
-  environments, same as in DOLFIN paper
-* Things to add to a notation section in case we add one
-  (as requested by one of the referees)
-
-    \partial_n  = normal derivative
-    \delta_{ij} = Kronecker delta
-* Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}
-* \emph{a~posteriori} always?
-* Check indentation in code examples:
-\begin{c++}
-stuff
-\end{c++}
-
-instead of
-
-\begin{c++}
-  stuff
-\end{c++}
-* Check for % accidentally included in paragraphs as a result of auto-fill
-* Check for use of Equation, equation, Eq., eq
-* Remove chapter header when backmatter starts
-* Check all captions after adjusting book margins so they don't intersect
-  with figures or text
-* Use $nn\,\mathrm{mm}$ for quantitites, will typeset numbers correctly,
-  not using text font
-* Fix missing indentation of paragraphs, was removed in rev 625
-* Add chapter numbers to headings
-* Fix strange / turning into \ in header for DOLFIN chapter
-* Change "CG" to "Lagrange" everywhere
-
-Things to discuss
-* Fix width of C++ and Python code environments, seem different
-* Use \toprule, \midrule, \bottomrule in tables
-* Should there be , after and?
-* foo or foo() in text when referring to functions?
+* Things to add to a notation section: \partial_n, \delta_{ij}
 * Common handling of www:foo references: author name or no author
   name. Looks strange when two packages are referenced together
   and one of them is written as the name of the package and the other
   the name of the author.
-* Full names in author list
-* Consistent use of single (') or double (") quotes.
-* How to write the convective term in NS: with or without \cdot
-* Add another level in numbering (include subsections) suggested by HPL
-  who has many references to subsections in the tutorial
-* Always italics for Latin like a posteriori?
-* Should we include a list of notation?
