Make width of code environments the same

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ Things to fix
 -------------
 
 * Use \center in floats (and not \begin{center} foo \end{center}            xx
-* Fix width of C++ and Python code environments, seem different             xx
+* Fix width of C++ and Python code environments, seem different             OK
 * Remove chapter header when backmatter starts                              xx
 * Change "CG" to "Lagrange" everywhere                                      xx
 * Change color in hyperref to something less neon                           xx
