--- a/book.tex
+++ b/book.tex
@@ -35,7 +35,7 @@
 
 %------------------------------------------------------------------------------
 % For testing
-%\fenicsinput{kirby-6}\end{document}
+\fenicsinput{logg-2}\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
