Change "CG" to "Lagrange" in all relevant code examples

--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ Things to fix
 * Use \center in floats (and not \begin{center} foo \end{center}            xx
 * Fix width of C++ and Python code environments, seem different             OK
 * Remove chapter header when backmatter starts                              xx
-* Change "CG" to "Lagrange" everywhere                                      xx
+* Change "CG" to "Lagrange" everywhere                                      OK
 * Change color in hyperref to something less neon                           xx
 * Numbers very small in Palatino, 0 looks like o, see FFC chapter           xx
 * Add items to index, should be used in all chapters                        xx
