Update TODO list after discussion

--- a/TODO
+++ b/TODO
@@ -30,13 +30,7 @@ Things to check
 * Check that all references have archival links if not published            xx
 * Use of "..." vs ``...''                                                   xx
 * Use $nn\,\mathrm{mm}$ for quantitites                                     xx
-
-Things to decide
-----------------
-
-* Use foo or foo() in text when referring to functions?
-* Include a list of notation?
-* How to write the convective term in NS: with or without \cdot?
+* Write the convective term in NS with \cdot?                               xx
 
 Not yet considered
 ------------------
