--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ Things to fix
 * Fix width of C++ and Python code environments, seem different             OK
 * Remove chapter header when backmatter starts                              xx
 * Change "CG" to "Lagrange" everywhere                                      OK
-* Change color in hyperref to something less neon                           xx
+* Change color in hyperref to something less neon                           OK
 * Numbers very small in Palatino, 0 looks like o, see FFC chapter           xx
 * Add items to index, should be used in all chapters                        xx
 * Collect code examples for all chapters                                    xx
