Don't use old-style numbers since they appear much smaller than running text and 0 looks like o

--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ Things to fix
 * Remove chapter header when backmatter starts                              xx
 * Change "CG" to "Lagrange" everywhere                                      OK
 * Change color in hyperref to something less neon                           OK
-* Numbers very small in Palatino, 0 looks like o, see FFC chapter           xx
+* Numbers very small in Palatino, 0 looks like o, see FFC chapter           OK
 * Add items to index, should be used in all chapters                        xx
 * Collect code examples for all chapters                                    xx
 * Use \toprule, \midrule, \bottomrule in tables                             xx
