Prevent heading from last chapter to continue in list of authors chapter

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ Things to fix
 
 * Use \center in floats (and not \begin{center} foo \end{center}            xx
 * Fix width of C++ and Python code environments, seem different             OK
-* Remove chapter header when backmatter starts                              xx
+* Remove chapter header when backmatter starts                              OK
 * Change "CG" to "Lagrange" everywhere                                      OK
 * Change color in hyperref to something less neon                           OK
 * Numbers very small in Palatino, 0 looks like o, see FFC chapter           OK
@@ -11,6 +11,8 @@ Things to fix
 * Collect code examples for all chapters                                    xx
 * Use \toprule, \midrule, \bottomrule in tables                             xx
 * Fix strange / turning into \ in header for DOLFIN chapter                 OK
+* Change order of chapters: FSI after F and S                               xx
+* Fix order of chapters in author list                                      xx
 
 Things to check
 ---------------
