--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 Things to fix
 -------------
 
-* Use \center in floats (and not \begin{center} foo \end{center}            xx
+* Use \center in floats (and not \begin{center} foo \end{center}           (AL)
 * Fix width of C++ and Python code environments, seem different             OK
 * Remove chapter header when backmatter starts                              OK
 * Change "CG" to "Lagrange" everywhere                                      OK
@@ -11,13 +11,13 @@ Things to fix
 * Collect code examples for all chapters                                    xx
 * Use \toprule, \midrule, \bottomrule in tables                             xx
 * Fix strange / turning into \ in header for DOLFIN chapter                 OK
-* Change order of chapters: FSI after F and S                               xx
-* Fix order of chapters in author list                                      xx
+* Change order of chapters: FSI after F and S                              (AL)
+* Fix order of chapters in author list                                     (AL)
 
 Things to check
 ---------------
 
-* No indentation of first line in code examples                             xx
+* No indentation of first line in code examples                            (AL)
 * No "," after "and" except when necessary                                  xx
 * There should be callouts in text to all floats                            xx
 * % accidentally included in paragraphs as a result of auto-fill            xx
