Revise order of chapters

--- a/book.tex
+++ b/book.tex
@@ -67,24 +67,35 @@
 \fenicsinput{mardal-2}
 
 \part{Applications}
+
+% flow problems
 \fenicsinput{terrel}
 \fenicsinput{kvs-1}
 \fenicsinput{mortensen}
-\fenicsinput{hoffman-1}
-\fenicsinput{selim}
-%\fenicsinput{wells}
-\fenicsinput{lopes}
 \fenicsinput{kvs-2}
 \fenicsinput{hentschel}
-\fenicsinput{narayanan}
+\fenicsinput{lopes}
+
+% solid mechanics
 \fenicsinput{oelgaard-1}
+\fenicsinput{narayanan}
+
+% fluid-structure interaction
+\fenicsinput{hoffman-1}
+\fenicsinput{selim}
+
+% misc applications
 \fenicsinput{nikbakht}
-\fenicsinput{schroll}
 \fenicsinput{vynnytska}
+\fenicsinput{schroll}
 \fenicsinput{hake}
 \fenicsinput{lezar}
+
+% misc techniques
 \fenicsinput{mardal-4}
 \fenicsinput{rognes}
+
+%\fenicsinput{wells}
 
 %------------------------------------------------------------------------------
 % Start backmatter
