Update TODO list

--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@ Things to fix
 * Collect code examples for all chapters                                    xx
 * Use \toprule, \midrule, \bottomrule in tables                             xx
 * Fix strange / turning into \ in header for DOLFIN chapter                 OK
-* Change order of chapters: FSI after F and S                              (AL)
+* Change order of chapters: FSI after F and S                               OK
 * Fix order of chapters in author list                                     (AL)
 
 Things to check
